# VideoAI

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml
src/videoai/: __init__.py  cli.py  config.py
src/videoai/analysis/: __init__.py  chatgpt.py  claude_ai.py  ollama.py
src/videoai/api/: __init__.py  app.py
src/videoai/automation/: __init__.py  premiere.py
src/videoai/organizer/: __init__.py  files.py
src/videoai/premiere/: xml.py
src/videoai/timeline/timeline.py/: timeline.py
src/videoai/transcription/: __init__.py  whisper.py
src/videoai/video/: __init__.py  clips.py  ffmpeg.py  subtitles.py
tests/: test_organizer.py  test_transcription.py
